--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@
 
 <body>
     <div class="topofnav">
-        <img src="" class="jaqueslogo">
+        <img src="img/placeholder.jpg" class="jaqueslogo">
         <h1>The start of our community</h1>
         <nav>
             <ul>
@@ -17,7 +17,18 @@
     </div>
     <div class="menu">
         <ul>
-            <li><img></li>
+            <li class="menuitem">
+                <img src="img/placeholder.jpg" class="homemenuitem">
+            </li>
+            <li class="menuitem">
+                <img src="img/placeholder.jpg" class="kalendermenuitem">
+            </li>
+            <li class="menuitem">
+                <img src="img/placeholder.jpg" class="zoekmenuitem">
+            </li>
+            <li class="menuitem">
+                <img src="img/placeholder.jpg" class="profilemenuitem">
+            </li>
         </ul>
     </div>
 </body>
