--- a/html/home.html
+++ b/html/home.html
@@ -1,6 +1,12 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Index.css">
+    <script src="jquery-3.2.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="js/scriptHomepage.js"></script>
 </head>
 
 <body>
@@ -18,16 +24,16 @@
     <div class="menu">
         <ul>
             <li class="menuitem">
-                <img src="img/placeholder.jpg" class="homemenuitem">
+                <img src="/img/placeholder.jpg" class="homemenuitem">
             </li>
             <li class="menuitem">
-                <img src="img/placeholder.jpg" class="kalendermenuitem">
+                <img src="/img/placeholder.jpg" class="kalendermenuitem">
             </li>
             <li class="menuitem">
-                <img src="img/placeholder.jpg" class="zoekmenuitem">
+                <img src="/img/placeholder.jpg" class="zoekmenuitem">
             </li>
             <li class="menuitem">
-                <img src="img/placeholder.jpg" class="profilemenuitem">
+                <img src="/img/placeholder.jpg" class="profilemenuitem">
             </li>
         </ul>
     </div>
