--- a/html/home.html
+++ b/html/home.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Index.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/Index.css">
     <script src="jquery-3.2.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="js/scriptHomepage.js"></script>
@@ -11,7 +11,7 @@
 
 <body>
     <div class="topofnav">
-        <img src="img/placeholder.jpg" class="jaqueslogo">
+        <img src="/img/placeholder.jpg" class="jaqueslogo">
         <h1>The start of our community</h1>
         <nav>
             <ul>
