--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -4,25 +4,25 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/Index.css">
-  <title>... </title>
-  <script src="jquery-3.2.0.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="js/scriptHomepage.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> Search </title>
 </head>
 
 <body>
-  <nav>
-    <ul>
-      <li>Prijzen</li>
-      <li>Winnaars</li>
-      <li>FAQ</li>
-    </ul>
-  </nav>
-  <div id=HierIsDeSlider>
-    <div id="sliderContainer"></div>
-    <!---------------------------------------------------------------><a class="prev buttonsNextPrev" onmouseover="showArrow()" onclick="prevNextImg('prev')" id="prev">&#10094;</a> <a onmouseover="showArrow()" onclick="prevNextImg('next')" class="next buttonsNextPrev" id="next">&#10095;</a> </div>
-  <div class="dots"> </div> <a><h1>Choose this trip</h1></a> </body>
+  <section>
+    <input type="text" placeholder="Search"> </section>
+  <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
+  <h1>Interesting venues</h1>
+  <section class="SliderImg">
+    <div> <img src="../img/Placeholder.jpg">
+      <h2>Anderlecht Brewery</h2></div>
+    <div> <img src="../img/Placeholder.jpg">
+      <h2>Barbershop Jef</h2></div>
+    <div> <img src="../img/Placeholder.jpg">
+      <h2>Naaiatelier</h2></div>
+  </section>
+  <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
+  <section></section>
+</body>
 
 </html>
