--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/Index.css">
+    <link rel="stylesheet" href="/css/home.css">
     <script src="jquery-3.2.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="js/scriptHomepage.js"></script>
