--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/SearchPage.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Search </title>
 </head>
@@ -14,15 +15,24 @@
   <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
   <h1>Interesting venues</h1>
   <section class="SliderImg">
-    <div> <img src="../img/Placeholder.jpg">
-      <h2>Anderlecht Brewery</h2></div>
-    <div> <img src="../img/Placeholder.jpg">
-      <h2>Barbershop Jef</h2></div>
-    <div> <img src="../img/Placeholder.jpg">
-      <h2>Naaiatelier</h2></div>
+    <div>
+      <h3>Anderlecht Brewery</h3> <img src="../img/Placeholder.jpg"> </div>
+    <div>
+      <h3>Barbershop Jef</h3> <img src="../img/Placeholder.jpg"> </div>
+    <div>
+      <h3>Naaiatelier</h3> <img src="../img/Placeholder.jpg"> </div>
   </section>
   <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
-  <section></section>
+  <section>
+    <h1>Filters</h1>
+    <div>
+      <h2>Food &amp; Drinks</h2>
+      <h2>Beauty</h2>
+      <h2>Social initiatives</h2>
+      <h2> Clothing &amp; accessories</h2>
+      <h2>DIY</h2>
+      <h2>Hobbies</h2> </div>
+  </section>
 </body>
 
 </html>
