--- a/html/profielLogIn.html
+++ b/html/profielLogIn.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<header class="hoofddingLogin">Log in</header>
+<header class="hoofddingLogin"><h1>Log in</h1></header>
 
 <img id="foto" src="/img/Placeholder.jpg"/>
  
