--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -3,7 +3,7 @@
 
 <head>
   <!--   <link rel="icon" href="xxx" type="gif">-->
-  <!--    <link rel="stylesheet" href="stylesheet.css">-->
+      <link rel="stylesheet" href="/css/company_event.css">
   <meta charset="utf-8">
   <!--  <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">-->
   <title> Company Name Here | App Name Here</title>
