--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -2,16 +2,37 @@
 <html lang="en">
 
 <head>
-<!--   <link rel="icon" href="xxx" type="gif">-->
-    <link rel="stylesheet" href="stylesheet.css">
+  <!--   <link rel="icon" href="xxx" type="gif">-->
+  <link rel="stylesheet" href="/css/company_event.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">
-   <title> Event Name Here | App Name Here</title>
+  <title> Event Name Here | App Name Here</title>
 </head>
-  
-  <body>
-  
-  </body>
-  
-  
+
+<body>
+  <header>
+    <!--    hier terug-knopje-->
+    <h2>Details</h2></header>
+  <main>
+    <h1 class="event_header">BottleMania @ Anderlecht Brewery</h1>
+    <section class="company_info">
+      <p class="company_name_event">Anderlecht Brewery</p>
+      <p>Nijverheidskaai 01 3000 Brussel</p>
+      <p><a href="mailto:info@kittybons.com">contact</a></p>
+    </section>
+    <section class="event_date">
+      <p>25 juni 2017</p>
+      <p>13:00 tot 16:00</p>
+    </section>
+    <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
+    <!--    deze h3's worden accordeon-menu van het bedrijf-->
+    <h3 class="event_accordeon">Reviews</h3>
+<!--    hebben we dit ook nodig op company page? of bijv. 3 suggestie events in de buurt?-->
+    <h3 class="event_accordeon">Other events</h3>
+    <h3 class="event_accordeon">Jobs</h3>
+    <h3 class="event_accordeon">Products</h3>
+    <h3 class="event_accordeon"></h3>
+    <h3 class="event_accordeon"></h3> </main>
   <footer> </footer>
+</body>
+<footer> </footer>
