--- a/html/profielLogIn.html
+++ b/html/profielLogIn.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<header class="hoofddingLogin"><h1>Log in</h1></header>
+<header class="hoofddingLogin"><h2>Log in</h2></header>
 
 <img id="foto" src="/img/Placeholder.jpg"/>
  
@@ -30,9 +30,9 @@
  
  <div class="socialMediaIcons">
      <ul>
-         <li>facebook</li>
-         <li>Google plus</li>
-         <li>twitter</li>
+         <li><img src="/img/Placeholder.jpg"/></li>
+         <li><img src="/img/Placeholder.jpg"/></li>
+         <li><img src="/img/Placeholder.jpg"/></li>
      </ul>
      
  </div>
