--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -16,9 +16,13 @@
   <main>
     <h1 class="event_header">BottleMania @ Anderlecht Brewery</h1>
     <section class="company_info">
+<!--      hier ook company_profile_photo?-->
       <p class="company_name_event">Anderlecht Brewery</p>
       <p>Nijverheidskaai 01 3000 Brussel</p>
       <p><a href="mailto:info@kittybons.com">contact</a></p>
+      <p> (aantal subscribers)</p>
+      <a href="subscribe_button">(hartje)</a>
+<!--         hier nog iconfont installeren voor hartje-->
     </section>
     <section class="event_date">
       <p>25 juni 2017</p>
