accordion werkt nog niet

--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <!--  <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">-->
   <title> Company Name Here | App Name Here</title>
+  
 </head>
 
 <body>
@@ -28,7 +29,7 @@
     
 <!--    deze buttons worden accordeon-menu van het bedrijf-->
     <button class="accordion">Events</button>
-    <div class="panel"><p>inhoud van het vouw-menu</p>
+    <div class="panel"><p>inhoud van het vouw-menu, waarom vouwt dit niet uit???????</p>
     </div>
     
      <button class="accordion">Jobs</button>
@@ -54,4 +55,5 @@
   
   </main>
   <footer> </footer>
+  <script src="/js/accordion_menu_company.js"></script>
 </body>
