--- a/html/home.html
+++ b/html/home.html
@@ -22,6 +22,21 @@
             </ul>
         </nav>
     </div>
+
+    <footer class="nav">
+        <ul>
+            <li>
+                <a href="#"> <img src="/img/Placeholder.jpg" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="/img/Placeholder.jpg" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="/img/Placeholder.jpg" /></a>
+            </li>
+        </ul>
+    </footer>
+
 </body>
 
 </html>
