--- a/html/Profiel.html
+++ b/html/Profiel.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Prijzen pagina</title>
     <link rel="stylesheet" href="/css/profiel.css">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="#"></script>
 </head>
@@ -38,7 +39,13 @@
 
 
 
-    <footer>dit is de footer</footer>
+     <footer class="nav">
+        <ul>
+            <li><a href="#"> <img src="/img/Placeholder.jpg" /></a></li>
+            <li><a href="#"><img src="/img/Placeholder.jpg" /></a></li>
+            <li><a href="#"><img src="/img/Placeholder.jpg" /></a></li>
+        </ul>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
