--- a/html/profielLogIn.html
+++ b/html/profielLogIn.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Prijzen pagina</title>
     <link rel="stylesheet" href="/css/profielLogIn.css">
+    <link rel="stylesheet" href="/css/style.css">
     
     <script src="#"></script>
 </head>
@@ -38,7 +39,13 @@
  </div>
 
  
- <footer>dit is de footer</footer>
+ <footer class="nav">
+        <ul>
+            <li><a href="#"> <img src="/img/Placeholder.jpg" /></a></li>
+            <li><a href="#"><img src="/img/Placeholder.jpg" /></a></li>
+            <li><a href="#"><img src="/img/Placeholder.jpg" /></a></li>
+        </ul>
+    </footer>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
