--- a/html/Profiel.html
+++ b/html/Profiel.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Prijzen pagina</title>
-    <link rel="stylesheet" href="/css/profiel.css">
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/profiel.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="#"></script>
 </head>
@@ -33,6 +34,7 @@
             <li>Favourites</li>
             <hr>
             <li>Settings</li>
+            <br>
         </ul>
     </div>
 
