--- a/html/profielLogIn.html
+++ b/html/profielLogIn.html
@@ -6,7 +6,7 @@
     <title>Prijzen pagina</title>
     <link rel="stylesheet" href="/css/profielLogIn.css">
     <link rel="stylesheet" href="/css/style.css">
-    
+     <link rel="stylesheet" href="/css/reset.css">
     <script src="#"></script>
 </head>
 
@@ -25,8 +25,14 @@
     
 </div>
 
+<br>
+
+<div class="loginHolder">
 <input id="logIn" type="button" value="Log in" onclick="#" />
- 
+</div>
+
+<br>
+  
 <p>want to join? <a id="linkRegisterHere" href="#">Register here.</a> It's free!</p>   
  
  <div class="socialMediaIcons">
