--- a/html/home.html
+++ b/html/home.html
@@ -23,6 +23,10 @@
         </nav>
     </div>
 
+    <iframe width="100%" height="500px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAuo-2TR193rIe5KOGgGZTXza8sE4o_GgQ
+    &q=Space+Needle,Seattle+WA">
+    </iframe>
+
     <footer class="nav">
         <ul>
             <li>
