--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -14,13 +14,21 @@
     <input type="text" placeholder="Search"> </section>
   <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
   <h1>Interesting venues</h1>
-  <section class="SliderImg">
-    <div>
-      <h3>Anderlecht Brewery</h3> <img src="../img/Placeholder.jpg"> </div>
-    <div>
-      <h3>Barbershop Jef</h3> <img src="../img/Placeholder.jpg"> </div>
-    <div>
-      <h3>Naaiatelier</h3> <img src="../img/Placeholder.jpg"> </div>
+  <section class="Slider">
+    <div class="SliderImg">
+      <div class=" imgInsSlider"> <img src="../img/Placeholder.jpg ">
+        <h3>Anderlecht Brewery</h3> </div>
+      <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
+        <h3>Barbershop Jef</h3> </div>
+      <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
+        <h3>Naaiatelier</h3> </div>
+      <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
+        <h3>Anderlecht Brewery</h3> </div>
+      <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
+        <h3>Barbershop Jef</h3> </div>
+      <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
+        <h3>Naaiatelier</h3> </div>
+    </div>
   </section>
   <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
   <section>
