--- a/html/home.html
+++ b/html/home.html
@@ -8,6 +8,7 @@
     <script src="jquery-3.2.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="js/scriptHomepage.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
