--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/SearchPage.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <title> Search </title>
 </head>
 
@@ -41,6 +43,19 @@
       <h2>DIY</h2>
       <h2>Hobbies</h2> </div>
   </section>
+  <footer class="nav">
+    <ul>
+      <li>
+        <a href="#"> <img src="/img/Placeholder.jpg" /></a>
+      </li>
+      <li>
+        <a href="#"><img src="/img/Placeholder.jpg" /></a>
+      </li>
+      <li>
+        <a href="#"><img src="/img/Placeholder.jpg" /></a>
+      </li>
+    </ul>
+  </footer>
 </body>
 
 </html>
