example events added

--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <!--   <link rel="icon" href="xxx" type="gif">-->
   <link rel="stylesheet" href="../css/company_event.css">
   <link rel="stylesheet" href="../css/style.css">
   <meta charset="utf-8">
@@ -20,34 +19,44 @@
       <p>Nijverheidskaai 01 3000 Brussel</p>
       <p><a href="mailto:info@kittybons.com">contact</a></p>
     </section>
-    
-    
     <!--    deze buttons worden accordeon-menu van het bedrijf, via w3schools-->
     <button class="accordion">Events</button>
     <div class="panel">
       <p>inhoud van het vouw-menu, ja nu vouwt het uit, perfecto</p>
       <p>dit ook</p>
-    </div>
-    <button class="accordion">Jobs</button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
-    <button class="accordion">Products</button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
-    <button class="accordion">Reviews</button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
-    <button class="accordion"></button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
-    <button class="accordion"></button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
+      <div class="example_event">
+        <div class="example_event_date">25 may 2017
+          </div>
+        <div class="example_event_title">BierGarten Brussels</div>
+          <div class="example_event_description">A wonderfull friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
+        </div>
+      <div class="example_event">
+        <div class="example_event_date">25 june 2017
+          </div>
+        <div class="example_event_title">BottleMania </div>
+          <div class="example_event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
+        </div>
+      </div>
+      <button class="accordion">Jobs</button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
+      <button class="accordion">Products</button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
+      <button class="accordion">Reviews</button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
+      <button class="accordion"></button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
+      <button class="accordion"></button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
   </main>
   <footer class="nav">
     <ul>
