--- a/html/profielLogIn.html
+++ b/html/profielLogIn.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Prijzen pagina</title>
-    <link rel="stylesheet" href="/css/profielLogIn.css">
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
-     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/profielLogIn.css">
+     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+     
     <script src="#"></script>
 </head>
 
