--- a/html/Profiel.html
+++ b/html/Profiel.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/profiel.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <script src="#"></script>
 </head>
 
@@ -25,15 +26,15 @@
 
     <div class="linksProfiel">
         <ul>
-            <li>My profile</li>
+            <li><a href="#">My profile</a></li>
             <hr>
-            <li>My invitations</li>
+            <li><a href="#">My invitations</a></li>
             <hr>
-            <li>Start new initiative</li>
+            <li><a href="#">Start new initiative</a></li>
             <hr>
-            <li>Favourites</li>
+            <li><a href="#">Favourites</a></li>
             <hr>
-            <li>Settings</li>
+            <li><a href="#">Settings</a></li>
             <br>
         </ul>
     </div>
