--- a/html/kalender.html
+++ b/html/kalender.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/kalender.css">
     <script src="jquery-3.2.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="js/scriptHomepage.js"></script>
@@ -11,23 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 
+<header>
+    <h1>Calendar</h1>
+</header>
+
 <body>
-    <div class="topofnav">
-        <img src="/img/placeholder.jpg" class="jaqueslogo">
-        <h1>The start of our community</h1>
-        <nav>
-            <ul>
-                <li>Jobs</li>
-                <li>Events</li>
-                <li>Tools</li>
-            </ul>
-        </nav>
-    </div>
-
-    <iframe width="100%" height="500px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAuo-2TR193rIe5KOGgGZTXza8sE4o_GgQ
-    &q=Space+Needle,Seattle+WA">
-    </iframe>
-
     <footer class="nav">
         <ul>
             <li>
