--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -35,13 +35,14 @@
   <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
   <section>
     <h1>Filters</h1>
-    <div>
-      <h2>Food &amp; Drinks</h2>
-      <h2>Beauty</h2>
-      <h2>Social initiatives</h2>
-      <h2> Clothing &amp; accessories</h2>
-      <h2>DIY</h2>
-      <h2>Hobbies</h2> </div>
+    <ul>
+      <li> <span class="before"></span>Food &amp; Drinks</li>
+      <li><span class="before"></span>Beauty</li>
+      <li><span class="before"></span>Social initiatives</li>
+      <li><span class="before"></span> Clothing &amp; accessories</li>
+      <li><span class="before"></span>DIY</li>
+      <li><span class="before"></span>Hobbies</li>
+    </ul>
   </section>
   <footer class="nav">
     <ul>
