uitvouw werkt overal

--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <!--  <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">-->
   <title> Company Name Here | App Name Here</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -25,38 +26,36 @@
       <p>inhoud van het vouw-menu, ja nu vouwt het uit, perfecto</p>
       <p>dit ook</p>
       <div class="example_event">
-        <div class="example_event_date">25 may 2017
-          </div>
+        <div class="example_event_date">25 may 2017 </div>
         <div class="example_event_title">BierGarten Brussels</div>
-          <div class="example_event_description">A wonderfull friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
-        </div>
+        <div class="example_event_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
+      </div>
       <div class="example_event">
-        <div class="example_event_date">25 june 2017
-          </div>
+        <div class="example_event_date">25 june 2017 </div>
         <div class="example_event_title">BottleMania </div>
-          <div class="example_event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
-        </div>
+        <div class="example_event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
       </div>
-      <button class="accordion">Jobs</button>
-      <div class="panel">
-        <p>inhoud van het vouw-menu</p>
-      </div>
-      <button class="accordion">Products</button>
-      <div class="panel">
-        <p>inhoud van het vouw-menu</p>
-      </div>
-      <button class="accordion">Reviews</button>
-      <div class="panel">
-        <p>inhoud van het vouw-menu</p>
-      </div>
-      <button class="accordion"></button>
-      <div class="panel">
-        <p>inhoud van het vouw-menu</p>
-      </div>
-      <button class="accordion"></button>
-      <div class="panel">
-        <p>inhoud van het vouw-menu</p>
-      </div>
+    </div>
+    <button class="accordion">Jobs</button>
+    <div class="panel">
+      <p>inhoud van het vouw-menu</p>
+    </div>
+    <button class="accordion">Products</button>
+    <div class="panel">
+      <p>inhoud van het vouw-menu</p>
+    </div>
+    <button class="accordion">Reviews</button>
+    <div class="panel">
+      <p>inhoud van het vouw-menu</p>
+    </div>
+    <button class="accordion"></button>
+    <div class="panel">
+      <p>inhoud van het vouw-menu</p>
+    </div>
+    <button class="accordion"></button>
+    <div class="panel">
+      <p>inhoud van het vouw-menu</p>
+    </div>
   </main>
   <footer class="nav">
     <ul>
