inhoud submenu toegevoegd

--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -25,28 +25,45 @@
     <div class="panel">
       <p>inhoud van het vouw-menu, ja nu vouwt het uit, perfecto</p>
       <p>dit ook</p>
-      <div class="example_event">
-        <div class="example_event_date">25 may 2017 </div>
-        <div class="example_event_title">BierGarten Brussels</div>
-        <div class="example_event_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
+      <div class="example_item">
+        <div class="example_item_date">25 may 2017 </div>
+        <div class="example_item_title">BierGarten Brussels</div>
+        <div class="example_item_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
       </div>
-      <div class="example_event">
-        <div class="example_event_date">25 june 2017 </div>
-        <div class="example_event_title">BottleMania </div>
-        <div class="example_event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
+      <div class="example_item">
+        <div class="example_item_date">25 june 2017 </div>
+        <div class="example_item_title">BottleMania </div>
+        <div class="example_item_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
       </div>
     </div>
     <button class="accordion">Jobs</button>
     <div class="panel">
-      <p>inhoud van het vouw-menu</p>
+      <div class="example_item">
+        <div class="example_item_date"> </div>
+        <div class="example_item_title">BottleMaster </div>
+        <div class="example_item_description">Help us bottle the first batch of AnderBier. You'll be responsible for coordinating and instructing the bottlers.</div>
+      </div>
+      <div class="example_item">
+        <div class="example_item_date"> </div>
+        <div class="example_item_title">BeerTaster m/v/x </div>
+        <div class="example_item_description">A nose for the best flavors in town? Help us select the best recipes and earn your weight in beer.</div>
+      </div>
     </div>
     <button class="accordion">Products</button>
     <div class="panel">
-      <p>inhoud van het vouw-menu</p>
+      <div class="example_item">
+        <div class="example_item_date"> </div>
+        <div class="example_item_title">AnderBier </div>
+        <div class="example_item_description">Buy buy buy our beer.</div>
+      </div>
     </div>
     <button class="accordion">Reviews</button>
     <div class="panel">
-      <p>inhoud van het vouw-menu</p>
+      <div class="example_item">
+        <div class="example_item_date"> </div>
+        <div class="example_item_title">Fantastic organisation! </div>
+        <div class="example_item_description">Really enjoyed our day at Anderlecht Brewers. The lady knew so much about beers, an expert in her field. </div>
+      </div>
     </div>
     <button class="accordion"></button>
     <div class="panel">
