--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -37,15 +37,15 @@
     </div>
     <button class="accordion">Other events</button>
     <div class="panel">
-      <div class="example_event">
-        <div class="example_event_date">25 may 2017 </div>
-        <div class="example_event_title">BierGarten Brussels</div>
-        <div class="example_event_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
+      <div class="example_item">
+        <div class="example_item_date">25 may 2017 </div>
+        <div class="example_item_title">BierGarten Brussels</div>
+        <div class="example_item_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
       </div>
-      <div class="example_event">
-        <div class="example_event_date">25 june 2017 </div>
-        <div class="example_event_title">BottleMania </div>
-        <div class="example_event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
+      <div class="example_item">
+        <div class="example_item_date">25 june 2017 </div>
+        <div class="example_item_title">BottleMania </div>
+        <div class="example_item_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
       </div>
     </div>
     <button class="accordion">Related products</button>
