--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -7,8 +7,7 @@
   <meta charset="utf-8">
   <!--  <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">-->
   <title> Company Name Here | App Name Here</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> </head>
 
 <body>
   <header>
@@ -17,15 +16,14 @@
   <main>
     <h1 class="company_header">Anderlecht Brewery</h1>
     <section class="company_info">
-      <p>Nijverheidskaai 01 3000 Brussel</p>
+      <p>Nijverheidskaai 01 </p>
+      <p>3000 Brussel</p>
       <p><a href="mailto:info@kittybons.com">contact</a></p>
     </section>
-    <!--    deze buttons worden accordeon-menu van het bedrijf, via w3schools-->
+    <!--    deze buttons worden accordeon-menu van het bedrijf, en panels zijn inhoud via w3schools-->
     <button class="accordion">Events</button>
     <div class="panel">
-      <p>inhoud van het vouw-menu, ja nu vouwt het uit, perfecto</p>
-      <p>dit ook</p>
-      <div class="example_item">
+        <div class="example_item">
         <div class="example_item_date">25 may 2017 </div>
         <div class="example_item_title">BierGarten Brussels</div>
         <div class="example_item_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
@@ -39,12 +37,12 @@
     <button class="accordion">Jobs</button>
     <div class="panel">
       <div class="example_item">
-        <div class="example_item_date"> </div>
+        <div class="example_item_date">xxx </div>
         <div class="example_item_title">BottleMaster </div>
         <div class="example_item_description">Help us bottle the first batch of AnderBier. You'll be responsible for coordinating and instructing the bottlers.</div>
       </div>
       <div class="example_item">
-        <div class="example_item_date"> </div>
+        <div class="example_item_date"> xxx </div>
         <div class="example_item_title">BeerTaster m/v/x </div>
         <div class="example_item_description">A nose for the best flavors in town? Help us select the best recipes and earn your weight in beer.</div>
       </div>
@@ -52,15 +50,15 @@
     <button class="accordion">Products</button>
     <div class="panel">
       <div class="example_item">
-        <div class="example_item_date"> </div>
+        <div class="example_item_date"> xxx </div>
         <div class="example_item_title">AnderBier </div>
-        <div class="example_item_description">Buy buy buy our beer.</div>
+        <div class="example_item_description">Buy! buy! buy! our beer.</div>
       </div>
     </div>
     <button class="accordion">Reviews</button>
     <div class="panel">
       <div class="example_item">
-        <div class="example_item_date"> </div>
+        <div class="example_item_date">xxx </div>
         <div class="example_item_title">Fantastic organisation! </div>
         <div class="example_item_description">Really enjoyed our day at Anderlecht Brewers. The lady knew so much about beers, an expert in her field. </div>
       </div>
