--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -15,7 +15,7 @@
 
 <body>
   <section>
-    <input type="text" placeholder="Search" id="search"> </section>
+    <input type="text" onkeyup="zoekWaardeVeranderen()" placeholder="Search" id="search"> </section>
   <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
   <h1>Interesting venues</h1>
   <section class="Slider">
