--- a/html/home.html
+++ b/html/home.html
@@ -39,7 +39,7 @@
                 mapTypeId: 'terrain'
             });
             var script = document.createElement('script');
-            script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
+            script.src = '../JSON/Bedrijven.json';
             document.getElementsByTagName('head')[0].appendChild(script);
         }
         window.eqfeed_callback = function (results) {
