--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -8,7 +8,8 @@
   <!--  <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">-->
   <title> Company Name Here | App Name Here</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> </head>
-
+<!--  dit is het icon font via google: ------>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <body>
   <header>
     <!--    hier terug-knopje-->
@@ -20,6 +21,8 @@
       <p>3000 Brussel</p>
       <p><a href="mailto:info@kittybons.com">contact</a></p>
     </section>
+    
+    <section class="connect_users"><p> (aantal subscribers)</p> <a class="subscribe_button" href="#"><i class="material-icons">favorite</i></a></section>
     <!--    deze buttons worden accordeon-menu van het bedrijf, en panels zijn inhoud via w3schools-->
     <button class="accordion">Events</button>
     <div class="panel">
