--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -7,7 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">
   <title> Event Name Here | App Name Here</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> </head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <!--  dit is het icon font via google: ------>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> </head>
 
 <body>
   <header>
@@ -17,21 +19,21 @@
     <h1 class="event_header">BottleMania @ Anderlecht Brewery</h1>
     <section class="company_info">
       <!--      hier ook company_profile_photo?-->
+<!--      dit is dat maps icoontje-->
+      <a class="location_link" href="#"><i class="material-icons">location_on</i></a>
       <p class="company_name_event">Anderlecht Brewery</p>
       <p>Nijverheidskaai 01 3000 Brussel</p>
       <p><a href="mailto:info@kittybons.com">contact</a></p>
-      <p> (aantal subscribers)</p> <a href="subscribe_button">(hartje)</a>
-      <!--         hier nog iconfont installeren voor hartje-->
     </section>
+    <section class="connect_users">
+      <p> (aantal subscribers)</p> <a class="subscribe_button" href="#"><i class="material-icons">favorite</i></a> </section>
     <section class="event_date">
       <p>25 juni 2017</p>
       <p>13:00 tot 16:00</p>
     </section>
     <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
-    
-    
     <!--    dit wordt accordeon-menu van het event-->
-     <button class="accordion">Reviews from previous events</button>
+    <button class="accordion">Reviews from previous events</button>
     <div class="panel">
       <p>inhoud van het vouw-menu</p>
     </div>
@@ -60,10 +62,6 @@
     <div class="panel">
       <p>inhoud van het vouw-menu</p>
     </div>
-  
-  
-  
-  
   </main>
   <footer class="nav">
     <ul>
