--- a/html/home.html
+++ b/html/home.html
@@ -48,6 +48,7 @@
                 var latLng = new google.maps.LatLng(coords[1], coords[0]);
                 var marker = new google.maps.Marker({
                     position: latLng,
+                    icon: iconBase + '',
                     map: map
                 });
             }
