added#naam to company profile

--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -15,8 +15,15 @@
     <!--    hier terug-knopje-->
     <h2>Details</h2></header>
   <main>
-    <h1 class="company_header">Anderlecht Brewery</h1>
+    
+    <div class="profielFoto">
+        <img id="foto" src="/img/Placeholder.jpg" />
+        <h1 id="naam">Anderlecht Brewery</h1>
+    </div>
+    
     <section class="company_info">
+      <!--      dit is dat maps icoontje-->
+      <a class="location_link" href="#"><i class="material-icons">location_on</i></a>
       <p>Nijverheidskaai 01 </p>
       <p>3000 Brussel</p>
       <p><a href="mailto:info@kittybons.com">contact</a></p>
