--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -21,9 +21,10 @@
       <!--      hier ook company_profile_photo?-->
 <!--      dit is dat maps icoontje-->
       <a class="location_link" href="#"><i class="material-icons">location_on</i></a>
+      <section class="company_info">
       <p class="company_name_event">Anderlecht Brewery</p>
       <p>Nijverheidskaai 01 3000 Brussel</p>
-      <p><a href="mailto:info@kittybons.com">contact</a></p>
+      <p><a href="mailto:info@kittybons.com">contact</a></p></section>
     </section>
     <section class="connect_users">
       <p> (aantal subscribers)</p> <a class="subscribe_button" href="#"><i class="material-icons">favorite</i></a> </section>
@@ -33,6 +34,7 @@
     </section>
     <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
     <!--    dit wordt accordeon-menu van het event-->
+    <section class="content_accordion">
     <button class="accordion">Reviews from previous events</button>
     <div class="panel">
       <p>inhoud van het vouw-menu</p>
@@ -61,7 +63,7 @@
     <button class="accordion">Other start-ups in the neighbourhood</button>
     <div class="panel">
       <p>inhoud van het vouw-menu</p>
-    </div>
+    </div></section>
   </main>
   <footer class="nav">
     <ul>
