--- a/html/Profiel.html
+++ b/html/Profiel.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Prijzen pagina</title>
+    <title>Jan Smit | Profiel</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/profiel.css">
